--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<nav>
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Publications</a></li>
+							<li><a href="#one">Research</a></li>
 							<li><a href="#two">Notes & Tutorials</a></li>
 							<li><a href="#three">Resources</a></li>
 							<li><a href="#four">MIVC Group</a></li>
@@ -34,33 +34,33 @@
 			<div id="wrapper">
 
 				<!-- Intro -->
-					<section id="intro" class="wrapper style1 fullscreen fade-up">
+					<section id="intro" class="wrapper style2-black fullscreen fade-up">
 						<div class="inner">
 							<h1>Yuzhe Shi</h1>
 							<p>I am pursuing for Bachelor degree of computer science at Huazhong University of Science and Techenology, graduating due June 2022</a>.</p>
 							<ul class="actions">
-								<li><a href="one" class="button scrolly">Learn More</a></li>
+								<li><a href="#one" class="button scrolly">Learn More</a></li>
 							</ul>
 						</div>
 					</section>
 
 				<!-- One -->
-					<section id="one" class="wrapper style2 spotlights">
+					<section id="one" class="wrapper style1-alt spotlights">
 						<section>
 							<!-- <a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a> -->
 							<div class="content">
 								<div class="inner">
-									<h2>Publications</h2>
-									<p>Research projects.</p>
+									<h2>Research</h2>
+									<p>Research projects and publications.</p>
 									<ul class="actions">
-										<li><a href="list.md" class="button">Learn more</a></li>
+										<li><a href="Research.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
 					</section>
 				<!-- Two -->
-					<section id="two" class="wrapper style2 spotlights">
+					<section id="two" class="wrapper style2-darkblue spotlights">
 						<section>
 							<!--<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>-->
 							<div class="content">
@@ -68,7 +68,7 @@
 									<h2>Notes & Tutorials</h2>
 									<p>Learning notes and tutorials.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="Notes.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -98,33 +98,17 @@
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
-									<h3>Lorem ipsum amet</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>News</h3>
+
 								</section>
 								<section>
 									<span class="icon solid major fa-lock"></span>
-									<h3>Aliquam sed nullam</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Members</h3>
+
 								</section>
 								<section>
 									<span class="icon solid major fa-cog"></span>
-									<h3>Sed erat ullam corper</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-desktop"></span>
-									<h3>Veroeros quis lorem</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-link"></span>
-									<h3>Urna quis bibendum</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon major fa-gem"></span>
-									<h3>Aliquam urna dapibus</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Projects</h3>
 								</section>
 							</div>
 							<ul class="actions">
@@ -182,7 +166,7 @@
 											<ul class="icons">
 												<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 												<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-												<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+												<li><a href="https://github.com/YuzheSHI" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 												<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 												<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 											</ul>
@@ -199,7 +183,7 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Yuzhe Shi. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
