--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 									<h2>Resources</h2>
 									<p>Useful tools.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="Resources.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
