--- a/Notes.html
+++ b/Notes.html
@@ -69,6 +69,14 @@
 								</section>
 								<section>
 									<span class="icon solid major fa-code"></span>
+									<h2>Probability Theory Note</h2>
+									<p>Refined Note for Probability Theory and Mathematical Statistics.</p>
+									<ul class="actions">
+										<li><a href="Notes/ProbabilityTheory_Notes.pdf" class="button scrolly">Project</a></li>
+									</ul>
+								</section>
+								<section>
+									<span class="icon solid major fa-code"></span>
 									<h2>Learning Computer Vision</h2>
 									<p>Notes and Codes for learning OpenCV-Python..</p>
 									<ul class="actions">
