--- a/index.html
+++ b/index.html
@@ -97,18 +97,27 @@
 							<p>Media Intelligence and Visual Computing Group, A research group for undergrates.</p>
 							<div class="features">
 								<section>
-									<span class="icon solid major fa-code"></span>
+									<!--<span class="icon solid major fa-code"></span>-->
 									<h3>News</h3>
+									<ul class="actions">
+										<li><a href="Resources.html" class="button">Learn more</a></li>
+									</ul>
 
 								</section>
 								<section>
-									<span class="icon solid major fa-lock"></span>
+									<!--<span class="icon solid major fa-lock"></span>-->
 									<h3>Members</h3>
+									<ul class="actions">
+										<li><a href="Resources.html" class="button">Learn more</a></li>
+									</ul>
 
 								</section>
 								<section>
-									<span class="icon solid major fa-cog"></span>
+									<!--<span class="icon solid major fa-cog"></span>-->
 									<h3>Projects</h3>
+									<ul class="actions">
+										<li><a href="Resources.html" class="button">Learn more</a></li>
+									</ul>
 								</section>
 							</div>
 							<ul class="actions">
