--- a/Members.html
+++ b/Members.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Research</title>
+		<title>MIVC-Members</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -32,15 +32,57 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">Research</h1>
+							<h1 class="major">MIVC-Members</h1>
 							<!--<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>-->
 							<div class="features">
 								<section>
-									<span class="icon solid major fa-code"></span>
-									<h2>Visual Tracking Insight</h2>
-									<p>Paper for ACM Computin Surveys.</p>
+									
+									<h2>Yuzhe Shi</h2>
+									<p>Online Learning, Computer Vision-Visual Object Tracking.</p>
 									<ul class="actions">
-										<li><a href="https://github.com/YuzheSHI/CSUR-paper-workspace" class="button scrolly">Project</a></li>
+										<li><a href="https://yuzheshi.github.io/" class="button scrolly">Homepage</a></li>
+									</ul>
+								</section>
+								<section>
+									<h2>Shenyuan Gao</h2>
+									<p>Online Learning, Computer Vision-Visual Object Tracking.</p>
+									<ul class="actions">
+										<li><a href="" class="button scrolly">Homepage</a></li>
+									</ul>
+								</section>
+								<section>
+									<h2>Shixuan Sun</h2>
+									<p>Engeering.</p>
+									<ul class="actions">
+										<li><a href="" class="button scrolly">Homepage</a></li>
+									</ul>
+								</section>
+								<section>
+									<h2>Shaofei Huang</h2>
+									<p>Online Learning, Computer Vision-Visual Object Tracking.</p>
+									<ul class="actions">
+										<li><a href="" class="button scrolly">Homepage</a></li>
+									</ul>
+								</section>
+								<section>
+									<h2>Zebin You</h2>
+									<p>Online Learning, Computer Vision-Visual Object Tracking.</p>
+									<ul class="actions">
+										<li><a href="" class="button scrolly">Homepage</a></li>
+									</ul>
+								</section>
+								<section>
+									<h2>Jing Ma</h2>
+									<p>Engeering.</p>
+									<ul class="actions">
+										<li><a href="" class="button scrolly">Homepage</a></li>
+									</ul>
+								</section>
+								<section>
+									<h2>Fanpeng Meng</h2>
+									<p>Online Learning, Computer Vision-Visual Object Tracking.</p>
+									<ul class="actions">
+										<li><a href="" class="button scrolly">Homepage</a></li>
 									</ul>
 								</section>
 							</div>
