--- a/News.html
+++ b/News.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Research</title>
+		<title>MIVC-News</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -32,15 +32,28 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">Research</h1>
+							<h1 class="major">MIVC News</h1>
 							<!--<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>-->
 							<div class="features">
 								<section>
-									<span class="icon solid major fa-code"></span>
-									<h2>Visual Tracking Insight</h2>
-									<p>Paper for ACM Computin Surveys.</p>
+									<h2>2020 Winter Recruit: Welcome to MIVC Group!</h2>
+									<p>Introduction to Media Intelligence & Visual Computing Group.</p>
 									<ul class="actions">
-										<li><a href="https://github.com/YuzheSHI/CSUR-paper-workspace" class="button scrolly">Project</a></li>
+										<li><a href="./News/STULAB.pdf" class="button scrolly">Learn More</a></li>
+									</ul>
+								</section>
+								<section>
+									<h2>MIVC Group FAQs</h2>
+									<p>Frequently asked Questions.</p>
+									<ul class="actions">
+										<li><a href="./News/FAQs.pdf" class="button scrolly">Learn More</a></li>
+									</ul>
+								</section>
+								<section>
+								<h2>Learner's Guide</h2>
+									<p>A pipline for progressing.</p>
+									<ul class="actions">
+										<li><a href="./News/Pipelines.pdf" class="button scrolly">Learn More</a></li>
 									</ul>
 								</section>
 							</div>
