--- a/Projects.html
+++ b/Projects.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Research</title>
+		<title>MIVC-Projects</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -32,15 +32,15 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">Research</h1>
+							<h1 class="major">MIVC-Projects</h1>
 							<!--<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>-->
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
-									<h2>Visual Tracking Insight</h2>
-									<p>Paper for ACM Computin Surveys.</p>
+									<h2>Visual Tracking Evaluation</h2>
+									<p>A scalable system for visual tracking evaluation.</p>
 									<ul class="actions">
-										<li><a href="https://github.com/YuzheSHI/CSUR-paper-workspace" class="button scrolly">Project</a></li>
+										<li><a href="https://github.com/YuzheSHI/Visual_Tracking_Surveys" class="button scrolly">Project</a></li>
 									</ul>
 								</section>
 							</div>
