--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Yuzhe Shi</title>
+		<title>Welcome to Yuzhe Shi's Homepage!</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -100,7 +100,7 @@
 									<!--<span class="icon solid major fa-code"></span>-->
 									<h3>News</h3>
 									<ul class="actions">
-										<li><a href="Resources.html" class="button">Learn more</a></li>
+										<li><a href="News.html" class="button">Learn more</a></li>
 									</ul>
 
 								</section>
@@ -108,7 +108,7 @@
 									<!--<span class="icon solid major fa-lock"></span>-->
 									<h3>Members</h3>
 									<ul class="actions">
-										<li><a href="Resources.html" class="button">Learn more</a></li>
+										<li><a href="Members.html" class="button">Learn more</a></li>
 									</ul>
 
 								</section>
@@ -116,13 +116,10 @@
 									<!--<span class="icon solid major fa-cog"></span>-->
 									<h3>Projects</h3>
 									<ul class="actions">
-										<li><a href="Resources.html" class="button">Learn more</a></li>
+										<li><a href="Projects.html" class="button">Learn more</a></li>
 									</ul>
 								</section>
 							</div>
-							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn more</a></li>
-							</ul>
 						</div>
 					</section>
 
