--- a/Notes.html
+++ b/Notes.html
@@ -69,6 +69,14 @@
 								</section>
 								<section>
 									<span class="icon solid major fa-code"></span>
+									<h2>Abductive Learning</h2>
+									<p>Personal perspectives on Abductive Learning.</p>
+									<ul class="actions">
+										<li><a href="Notes/Perspectives on Abductive Learning.pdf" class="button scrolly">Project</a></li>
+									</ul>
+								</section>
+								<section>
+									<span class="icon solid major fa-code"></span>
 									<h2>Probability Theory Note</h2>
 									<p>Refined Note for Probability Theory and Mathematical Statistics.</p>
 									<ul class="actions">
@@ -107,6 +115,7 @@
 										<li><a href="https://github.com/YuzheSHI/Advanced-Programming-Language-C" class="button scrolly">Project</a></li>
 									</ul>
 								</section>
+								
 							</div>
 						</div>
 					</section>
