--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Welcome to Yuzhe Shi's Homepage!</title>
+		<title>Welcome to Yu-Zhe Shi's Homepage!</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -36,13 +36,13 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style2-black fullscreen fade-up">
 						<div class="inner">
-							<h1>Yuzhe Shi 师宇哲</h1>
+							<h1>Yu-Zhe Shi 师宇哲</h1>
 							<p>I am pursuing for Bachelor degree of computer science at Huazhong University of Science and Techenology, graduating due June 2022</a>.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn More</a></li>
 								<li><a href="https://github.com/YuzheSHI" class="button scrolly">GitHub</a></li>
 								<li><a href="CV/YuzheShi_CV_English.pdf" class="button scrolly">Resume</a></li>
-								<li><a href="CV/YuzheShi_CV_Chinese.pdf" class="button scrolly">简历</a></li>
+								<!--<li><a href="CV/YuzheShi_CV_Chinese.pdf" class="button scrolly">简历</a></li>-->
 							</ul>
 								
 							</ul>
