--- a/Resources.html
+++ b/Resources.html
@@ -43,6 +43,14 @@
 										<li><a href="https://github.com/YuzheSHI/HUST-Lab_Reports-and-Assignments-LaTex-Templates" class="button scrolly">Project</a></li>
 									</ul>
 								</section>
+								<section>
+									<span class="icon solid major fa-code"></span>
+									<h2>Template for Matlab Plot</h2>
+									<p>A template for generating analysing plots via Matlab.</p>
+									<ul class="actions">
+										<li><a href="https://github.com/YuzheSHI/Matlab-Plot-Template" class="button scrolly">Project</a></li>
+									</ul>
+								</section>
 							</div>
 						</div>
 					</section>
