--- a/Resources.html
+++ b/Resources.html
@@ -45,10 +45,18 @@
 								</section>
 								<section>
 									<span class="icon solid major fa-code"></span>
-									<h2>Template for Matlab Plot</h2>
-									<p>A template for generating analysing plots via Matlab.</p>
+									<h2>Useful Templates for Plot</h2>
+									<p>A template for generating analysing plots via Matlab/Graphviz.</p>
 									<ul class="actions">
 										<li><a href="https://github.com/YuzheSHI/Matlab-Plot-Template" class="button scrolly">Project</a></li>
+									</ul>
+								</section>
+								<section>
+									<span class="icon solid major fa-code"></span>
+									<h2>Useful Online Tools and Resources</h2>
+									<p>Some recommendatory online tools and resources.</p>
+									<ul class="actions">
+										<li><a href="https://github.com/YuzheSHI/Online-Tools-and-Resources/blob/master/README.md" class="button scrolly">Project</a></li>
 									</ul>
 								</section>
 							</div>
