--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style2-black fullscreen fade-up">
 						<div class="inner">
-							<img src ="images/Avatar_L.JPG" width = "30" />
-							<h1>Yu-Zhe Shi 师宇哲</h1>
+							<h1>Yu-Zhe Shi 师宇哲 <img src ="images/Avatar_L.JPG" width = "60" /> </h1> 
 							<p>I am pursuing for Bachelor degree of computer science at Huazhong University of Science and Techenology, graduating due June 2022</a>.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn More</a></li>
