--- a/Notes.html
+++ b/Notes.html
@@ -36,6 +36,14 @@
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
+									<h2>Seminar: G2SAT</h2>
+									<p>My notes and slides for presentation at LAMDA Group, introducing G2SAT (NIPS'19)</p>
+									<ul class="actions">
+										<li><a href="Notes/Note-G2SAT.pdf">Notes</a></li><li><a href="Notes/Presentation-G2SAT.pdf">Slides</a></li>
+									</ul>
+								</section>
+								<section>
+									<span class="icon solid major fa-code"></span>
 									<h2>A Paper List for Visual Object Tracking</h2>
 									<p>A complete paper list of Single-Object Visual Tracking Algorithms, Surveys and Benchmarks of recent years. Different from existing paper list, this project doesn't simply category the papers by publishment, but from a tracking process perspective. Main Contributions and Novelties of each tracker paper is carefully studied, forming our taxonomy criteria. The investigation covers top conferences as AAAI, CVPR, ECCV, ICCV, ICML, IJCAI, NIPS and top journals as IJCV, TIP, PAMI, CSVT. Note that the list is not bijective, namely a single paper may appear in diverse contents.</p>
 									<ul class="actions">
