--- a/Notes.html
+++ b/Notes.html
@@ -39,7 +39,7 @@
 									<h2>Seminar: G2SAT</h2>
 									<p>My notes and slides for presentation at LAMDA Group, introducing G2SAT (NIPS'19)</p>
 									<ul class="actions">
-										<li><a href="Notes/Note-G2SAT.pdf" class="button scrolly">Notes</a></li><li><a href="Notes/Presentation-G2SAT.pdf" class="button scrolly">Slides</a></li><a href="https://arxiv.org/abs/1910.13445" class="button scrolly">Reference</a></li>
+										<li><a href="Notes/Note-G2SAT.pdf" class="button scrolly">Notes</a></li><li><a href="Notes/Presentation-G2SAT.pdf" class="button scrolly">Slides</a></li><li><a href="https://arxiv.org/abs/1910.13445" class="button scrolly">Reference</a></li>
 									</ul>
 								</section>
 								<section>
