--- a/Notes.html
+++ b/Notes.html
@@ -36,6 +36,14 @@
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
+									<h2>Book Review: Deep Work</h2>
+									<p>My notes on Deep Work by Cal Newport.</p>
+									<ul class="actions">
+										<li><a href="Notes/Deep%20Work%20Notes.pdf" class="button scrolly">Notes</a></li>
+									</ul>
+								</section>
+								<section>
+									<span class="icon solid major fa-code"></span>
 									<h2>Seminar: G2SAT</h2>
 									<p>My notes and slides for presentation at LAMDA Group, introducing G2SAT (NIPS'19)</p>
 									<ul class="actions">
