--- a/Notes.html
+++ b/Notes.html
@@ -36,6 +36,22 @@
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
+									<h2>Seminar: Few-Shot Bayesian Imitation Learning with Logical Program Policies</h2>
+									<p>My slides for presentation at LAMDA Group, introducing Few-Shot Bayesian Imitation Learning with Logical Program Policies(AAAI'20)</p>
+									<ul class="actions">
+										<li><a href="Notes/Seminar_Logical Program Policies.pdf" class="button scrolly">Slides</a></li><li><a href="https://arxiv.org/abs/1904.06317" class="button scrolly">Reference</a></li>
+									</ul>
+								</section>
+								<section>
+									<span class="icon solid major fa-code"></span>
+									<h2>Seminar: A Probabilistic Programming Language for Scene Perception</h2>
+									<p>My slides for presentation at LAMDA Group, introducing Picture: A Probabilistic Programming Language for Scene Perception (CVPR'15)</p>
+									<ul class="actions">
+										<li><a href="Notes/Seminar_Picture.pdf" class="button scrolly">Slides</a></li><li><a href="https://dspace.mit.edu/handle/1721.1/96620" class="button scrolly">Reference</a></li>
+									</ul>
+								</section>
+								<section>
+									<span class="icon solid major fa-code"></span>
 									<h2>Book Review: Deep Work</h2>
 									<p>My notes on Deep Work by Cal Newport.</p>
 									<ul class="actions">
