--- a/Notes.html
+++ b/Notes.html
@@ -44,6 +44,14 @@
 								</section>
 								<section>
 									<span class="icon solid major fa-code"></span>
+									<h2>Linear Classifiers</h2>
+									<p> Commons and distinctions between linear classifiers.本文比较了几种线性分类器的异同（中文撰写）。</p>
+									<ul class="actions">
+										<li><a href="Notes/LinearClassifier_Note.pdf" class="button scrolly">Project</a></li>
+									</ul>
+								</section>
+								<section>
+									<span class="icon solid major fa-code"></span>
 									<h2>Seminar: Few-Shot Bayesian Imitation Learning with Logical Program Policies</h2>
 									<p>My slides for presentation at LAMDA Group, introducing Few-Shot Bayesian Imitation Learning with Logical Program Policies (AAAI'20)</p>
 									<ul class="actions">
