--- a/Notes.html
+++ b/Notes.html
@@ -36,6 +36,14 @@
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
+									<h2>Program Synthesis Tutorial</h2>
+									<p> My slides for presentation at LAMDA Group, giving a coarse introduction to Program Synthesis, a sub-field of AI.</p>
+									<ul class="actions">
+										<li><a href="Notes/Program_Synthesis_Tutorial.pdf" class="button scrolly">Project</a></li>
+									</ul>
+								</section>
+								<section>
+									<span class="icon solid major fa-code"></span>
 									<h2>Machine Learning Note</h2>
 									<p> Refined notes for Machine Learning, form both the probabilistic perspective and the logical perspective.</p>
 									<ul class="actions">
