--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 							<li><a href="#one">Research</a></li>
 							<li><a href="#two">Notes & Tutorials</a></li>
 							<li><a href="#three">Resources</a></li>
-							<li><a href="#four">MIVC Group</a></li>
+							<li><a href="#four">LEARN Lab</a></li>
 							<li><a href="#five">Get in touch</a></li>
 						</ul>
 					</nav>
@@ -98,33 +98,18 @@
 				<!-- Four -->
 					<section id="four" class="wrapper style3 fade-up">
 						<div class="inner">
-							<h2>MIVC Group</h2>
-							<p>Media Intelligence and Visual Computing Group, A research group for undergrates.</p>
-							<div class="features">
-								<section>
-									<!--<span class="icon solid major fa-code"></span>-->
-									<h3>News</h3>
+							<section>
+							<!--<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>-->
+							<div class="content">
+								<div class="inner">
+									<h2>LEARN Lab</h2>
+									<p>Learner's Engineering and Research Network.</p>
 									<ul class="actions">
-										<li><a href="News.html" class="button">Learn more</a></li>
+										<li><a href="https://l-ear-n.github.io/" class="button">Learn more</a></li>
 									</ul>
-
-								</section>
-								<section>
-									<!--<span class="icon solid major fa-lock"></span>-->
-									<h3>Members</h3>
-									<ul class="actions">
-										<li><a href="Members.html" class="button">Learn more</a></li>
-									</ul>
-
-								</section>
-								<section>
-									<!--<span class="icon solid major fa-cog"></span>-->
-									<h3>Projects</h3>
-									<ul class="actions">
-										<li><a href="Projects.html" class="button">Learn more</a></li>
-									</ul>
-								</section>
+								</div>
 							</div>
+						</section>
 						</div>
 					</section>
 
