--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn More</a></li>
 								<li><a href="https://github.com/YuzheSHI" class="button scrolly">GitHub</a></li>
-								<li><a href="CV/Yu-Zhe_Shi_CV.pdf" class="button scrolly">Resume</a></li>
+								<li><a href="CV/Yu-Zhe_Shi_CV.pdf" class="button scrolly">CV</a></li>
 								<!--<li><a href="CV/YuzheShi_CV_Chinese.pdf" class="button scrolly">简历</a></li>-->
 							</ul>
 								
