--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 					</section>
 
 				<!-- One -->
-					<section id="one" class="wrapper style1-alt spotlights">
+					<section id="one" class="wrapper style2-black fullscreen fade-up">
 						<section>
 							<!-- <a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a> -->
 							<div class="content">
@@ -65,7 +65,7 @@
 						</section>
 					</section>
 				<!-- Two -->
-					<section id="two" class="wrapper style2-darkblue spotlights">
+					<section id="two" class="wrapper style2-black fullscreen fade-up">
 						<section>
 							<!--<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>-->
 							<div class="content">
@@ -80,7 +80,7 @@
 						</section>
 					</section>
 				<!-- Three -->
-					<section id="three" class="wrapper style2 spotlights">
+					<section id="three" class="wrapper style2-black fullscreen fade-up">
 						<section>
 							<!--<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>-->
 							<div class="content">
@@ -96,7 +96,7 @@
 					</section>
 
 				<!-- Four -->
-					<section id="four" class="wrapper style3 fade-up">
+					<section id="four" class="wrapper style2-black fullscreen fade-up">
 						<div class="inner">
 							<section>
 							<!--<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>-->
@@ -114,7 +114,7 @@
 					</section>
 
 				<!-- Five -->
-					<section id="five" class="wrapper style1 fade-up">
+					<section id="five" class="wrapper style2-black fullscreen fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
 							<p>Feel free to contact me!</p>
