--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 					</section>
 
 				<!-- One -->
-					<section id="one" class="wrapper style2-black fullscreen fade-up">
+					<section id="one" class="wrapper style2-black fade-up">
 						<section>
 							<!-- <a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a> -->
 							<div class="content">
