--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 					</section>
 
 				<!-- One -->
-					<section id="one" class="wrapper style2-black fade-up">
+					<section id="one" class="wrapper style2-black fullscreen fade-up">
+						<div class="inner">
 						<section>
 							<!-- <a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a> -->
 							<div class="content">
@@ -63,9 +64,11 @@
 								</div>
 							</div>
 						</section>
+						</div>
 					</section>
 				<!-- Two -->
 					<section id="two" class="wrapper style2-black fullscreen fade-up">
+						<div class="inner">
 						<section>
 							<!--<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>-->
 							<div class="content">
@@ -78,9 +81,11 @@
 								</div>
 							</div>
 						</section>
+						</div>
 					</section>
 				<!-- Three -->
 					<section id="three" class="wrapper style2-black fullscreen fade-up">
+						<div class="inner">
 						<section>
 							<!--<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>-->
 							<div class="content">
@@ -93,6 +98,7 @@
 								</div>
 							</div>
 						</section>
+						</div>
 					</section>
 
 				<!-- Four -->
