--- a/Notes.html
+++ b/Notes.html
@@ -36,6 +36,14 @@
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
+									<h2>Beethoven 250th</h2>
+									<p> An article on the music of Beethoven for his 250th birthday. 世事无常，音乐永恒——贝多芬诞辰250周年纪念日（简体中文撰写）。</p>
+									<ul class="actions">
+										<li><a href="/Notes/Beethoven250th.pdf" class="button scrolly">Project</a></li>
+									</ul>
+								</section>
+								<section>
+									<span class="icon solid major fa-code"></span>
 									<h2>Program Synthesis Tutorial</h2>
 									<p> My slides for presentation at LAMDA Group, giving a coarse introduction to Program Synthesis, a sub-field of AI.</p>
 									<ul class="actions">
