--- a/Research.html
+++ b/Research.html
@@ -37,8 +37,13 @@
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
-									<h2>Comprehensive Study on Visual Object Tracking under Explosion of Deep Learning: Survey and Experiments</h2>
-									<p>Having learned the limitations of deep learning, I decided to pursuit for intelligence which is more general, reliable and comprehensible.</p>
+									<h2>Abductive Novel Object Invention</h2>
+									<p>
+								</section>
+								<section>
+									<span class="icon solid major fa-code"></span>
+									<h2>Experimental Study on Visual Object Tracking</h2>
+									<p>We study the merits of diverse visual tracking paradigms by comparative experiments. Having learned the limitations of deep learning, I decided to pursuit for intelligence which is more general, reliable and comprehensible.</p>
 									<ul class="actions">
 										<li><a href="https://github.com/YuzheSHI/CSUR-paper-workspace" class="button scrolly">Project</a></li>
 									</ul>
