--- a/Research.html
+++ b/Research.html
@@ -37,8 +37,47 @@
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
-									<h2>Abductive Novel Object Invention</h2>
-									<p>
+									<h2>Abductive </h2>
+									<p>Key Words: </p>
+									<p>Motivation: </p>
+									<p>Task: </p>
+									<p>Method: </p>
+									<ul class="actions">
+										<li><a href="https://github.com/YuzheSHI/ABLaoi" class="button scrolly">Project</a></li>
+									</ul>
+								</section>
+								<section>
+									<span class="icon solid major fa-code"></span>
+									<h2>Interpretative Neural </h2>
+									<p>Key Words: </p>
+									<p>Motivation: </p>
+									<p>Task: </p>
+									<p>Method: </p>
+									<ul class="actions">
+										<li><a href="https://github.com/YuzheSHI/ABL-Feature" class="button scrolly">Project</a></li>
+									</ul>
+								</section>
+								<section>
+									<span class="icon solid major fa-code"></span>
+									<h2>Revising Waiting for the Bus Problem: A Human-Centered Computing Perspective</h2>
+									<p>Key Words: </p>
+									<p>Motivation: </p>
+									<p>Task: </p>
+									<p>Method: </p>
+									<ul class="actions">
+										<li><a href="https://github.com/YuzheSHI/Waiting-Interaction-Experiment" class="button scrolly">Project</a></li>
+									</ul>
+								</section>
+								<section>
+									<span class="icon solid major fa-code"></span>
+									<h2>Abductive Novel Object Invention for Incremental Learning</h2>
+									<p>Key Words: Neural-Symbolic Learning, Probabilistic CFG, Expectation Maximization.</p>
+									<p>Motivation: Can the learner detect instances belonging to classes that never been seen nor known before from raw data and label them autonomously with the help of background knowledge? </p>
+									<p>Task: The learner starts with a CNN classifier that recognizes hand-written symbols \texttt{0, 1, 2, +, -, =} and background knowledge about successor relation.</p>
+									<p>Method: We feed the learner with image sequences like \texttt{0+++=3} and it tries to estimate the distribution of novel objects by both the classification score and logical consistency of PCFG. Then the learner abducts an atomic predicate representing the relationship between the novel class and known classes, e.g. \texttt{new\_digit(X):-succ(2,X)}. It labels the novel instances with the predicates and update the classifier.</p>
+									<ul class="actions">
+										<li><a href="https://github.com/YuzheSHI/ABL-AOI" class="button scrolly">Project</a></li>
+									</ul>
 								</section>
 								<section>
 									<span class="icon solid major fa-code"></span>
