--- a/Research.html
+++ b/Research.html
@@ -59,11 +59,11 @@
 								</section>
 								<section>
 									<span class="icon solid major fa-code"></span>
-									<h2>Revising Waiting for the Bus Problem: A Human-Centered Computing Perspective</h2>
-									<p>Key Words: </p>
-									<p>Motivation: </p>
-									<p>Task: </p>
-									<p>Method: </p>
+									<h2>Waiting for the Bus: A Human-Centered Computing Perspective</h2>
+									<p>Key Words: Subjective Probability, Inverse Planning.</p>
+									<p>Motivation: How do long-term and short-term perspective affect human subjective probability of waiting for a bus? Can we design a intelligent bot that helps users feel better when waiting for some event?</p>
+									<p>Task: We design a $2\times 6$ experiment making participants waiting for a schoolbus in a virtual environment simulating the campus, within 6 scenes and 2 ways of prompts (in short-term and long-term respectively). We record the videos and interactions with the computer of 28 participants.</p>
+									<p>Method: We apply micro-expression recognition models to the videos as groundtruth of emotion states of the participants and develop a bayesian model inferencing emotion states from human interactions with the computer via inverse planning. We aim to develop a bot that selects prompting strategy adaptively for different users according to their behavior on the interface.</p>
 									<ul class="actions">
 										<li><a href="https://github.com/YuzheSHI/Waiting-Interaction-Experiment" class="button scrolly">Project</a></li>
 									</ul>
